# Zaytsev_Tim_OOP_Labs

./: README.md
lab_01/: CMakeLists.txt  main.cpp  readme.md
lab_01/include/: num_to_32bit.h
lab_01/src/: num_to_32bit.cpp
lab_01/test/: tests01.cpp
lab_02/: CMakeLists.txt  README.md  README.mg  a.out  main.cpp
lab_02/include/: Twelve.h
lab_02/src/: Twelve.cpp
lab_02/test/: tests02.cpp
lab_03/: CMakeLists.txt  README.md  main.cpp
lab_03/include/: Figure.h  Rectangle.h  Square.h  Trapezoid.h
lab_03/src/: Figure.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
lab_03/test/: tests03.cpp
lab_04/: CMakeLists.txt  README.md  main.cpp
lab_04/include/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h  foo.h
lab_04/src/: foo.cpp
lab_04/test/: tests04.cpp
lab_05/: CMakeLists.txt  main.cpp
lab_05/include/: MemoryResource.hpp  PmrList.hpp
lab_05/src/: MemoryResource.cpp
lab_05/test/: tests05.cpp
